cmake_minimum_required(VERSION 2.8)
project( eyefinder )
find_package( OpenCV REQUIRED )
find_package(PkgConfig)
pkg_check_modules(LSP REQUIRED libserialport)
include_directories( ${OpenCV_INCLUDE_DIRS} ${LSP_INCLUDE_DIRS} include)
file(GLOB SOURCES "src/*.cpp")
add_executable( eyefinder  ${SOURCES})
target_link_libraries( eyefinder ${OpenCV_LIBS} ${LSP_LIBRARIES})